--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,18 @@
+html {
+    box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+/* * {
+    border: 1px solid red;
+} */
+
 body {
-    background: greenyellow;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
